--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,15 @@ jobs:
           node-version: '20'
           cache: 'npm'
 
-      - name: Install dependencies (with legacy peer deps)
-        run: npm install --legacy-peer-deps
-
-      - name: Build
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build the app
         run: npm run build
-
-      - name: Deploy to gh-pages
-        uses: peaceiris/actions-gh-pages@v4
+      
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
-          publish_branch: gh-pages
+          branch: gh-pages
+          folder: dist
+
